note-ports/coffee/coffee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: coffee-ingress
  namespace: ingress-nginx
spec:
  defaultBackend:
    service:
      name: coffee-service
      port:
        number: 8083
  ingressClassName: nginx
  rules:
    - host: coffee.mylabs.com
  tls:
    - hosts:
        - coffee
      secretName: cafe-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.9.129
      - ip: 192.168.9.130
